[gd_scene load_steps=7 format=3 uid="uid://csch451ab72a5"]

[ext_resource type="PackedScene" uid="uid://dqq8oe5o5y7cj" path="res://Source/SpellMovers/linear_spell_mover.tscn" id="1_1fac3"]
[ext_resource type="Script" path="res://Source/Spells/magic_top.gd" id="1_u48ue"]
[ext_resource type="Texture2D" uid="uid://cifqufhetbrfn" path="res://Assets/Spells/MagicTopSpell_Large.png" id="2_cjdoe"]
[ext_resource type="PackedScene" uid="uid://b4utuabq3jous" path="res://Source/Functionality/damage_dealer.tscn" id="2_vopk1"]
[ext_resource type="PackedScene" uid="uid://bf7t2l6ea2juh" path="res://Source/Functionality/spell_funcationality.tscn" id="5_qwyc1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_er0lx"]

[node name="MagicTop" type="Area2D"]
z_index = 5
collision_layer = 0
collision_mask = 2
script = ExtResource("1_u48ue")
spell_lifetime = 1.5
spell_stoptime = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_er0lx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_cjdoe")

[node name="LinearSpellMover" parent="." node_paths=PackedStringArray("spell_node") instance=ExtResource("1_1fac3")]
spell_node = NodePath("..")

[node name="DamageDealer" parent="." instance=ExtResource("2_vopk1")]

[node name="Timer" type="Timer" parent="."]

[node name="SpellFuncationality" parent="." node_paths=PackedStringArray("spell_mover", "spell_damage") instance=ExtResource("5_qwyc1")]
spell_mover = NodePath("../LinearSpellMover")
spell_damage = NodePath("../DamageDealer")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
